[gd_scene load_steps=6 format=3 uid="uid://mixdeckw2671"]

[ext_resource type="PackedScene" uid="uid://t6im623he4tl" path="res://Enemies/enemy.tscn" id="1_pw383"]
[ext_resource type="Script" path="res://Enemies/walking_enemy.gd" id="2_qvwst"]
[ext_resource type="Texture2D" uid="uid://ckk2b4g7gjr25" path="res://Assets/Sprites/Enemies/WalkingEnemy.png" id="2_xv2xs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4stgm"]
size = Vector2(4, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_euhjn"]
size = Vector2(16, 14)

[node name="Walking_Enemy" instance=ExtResource("1_pw383")]
script = ExtResource("2_qvwst")
WALKING_DIRECTION = -1

[node name="Sprite2D" parent="." index="0"]
position = Vector2(0, -9)
texture = ExtResource("2_xv2xs")
flip_h = true
hframes = 2

[node name="Collider" parent="." index="1"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_4stgm")

[node name="FloorRight" type="RayCast2D" parent="." index="3"]
position = Vector2(2, -1)
target_position = Vector2(0, 6)
collision_mask = 2

[node name="FloorLeft" type="RayCast2D" parent="." index="4"]
position = Vector2(-2, -1)
target_position = Vector2(0, 6)
collision_mask = 2

[node name="WallRight" type="RayCast2D" parent="." index="5"]
position = Vector2(2, -8)
target_position = Vector2(6, 0)
collision_mask = 2

[node name="WallLeft" type="RayCast2D" parent="." index="6"]
position = Vector2(-2, -8)
target_position = Vector2(-6, 0)
collision_mask = 2

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_euhjn")

[editable path="Hurtbox"]
